(launcher) Regression: class with unicode name can't be launched by java.

XMLWordPrintable

    • b136
    • generic, x86
    • windows, windows_xp
    • Not verified

      Regression test test/tools/launcher/UnicodeTest.sh failed on zh or ja locales on Windows platform.

      Class with unicode name can't be launched by java.

      Can be reproduced on jdk7 build37 and later.
      Test jdk7 b147 on following two platforms, Regression test tools/launcher/UnicodeTest.sh still failed. Attached UnicodeTest.jtr and env.htm files for your reference.

      <1>Windows 7 6.1 (x86) with Cygwin
      java version "1.7.0"
      Java(TM) SE Runtime Environment (build 1.7.0-b147)
      Java HotSpot(TM) Client VM (build 21.0-b17, mixed mode)
      Locale tested: Thai(Thailand); Chinese(Simplified, PRC); Japanese(Japan)

      <2>Windows Server 2008 R2 6.1 (amd64) with Cygwin
      java version "1.7.0"
      Java(TM) SE Runtime Environment (build 1.7.0-b147)
      Java HotSpot(TM) 64-Bit Server VM (build 21.0-b17, mixed mode)
      Locale tested: Thai(Thailand); Chinese(Simplified, PRC); Japanese(Japan)

      Region and Language in Windows Control Panel (including Format; Current location; Display language; System locale) are all set to the related test language.

      However, run the attached program java file aaa.zip in CR7025874, it works perfectly on zh and ja locale with native characters.

            Assignee:
            Kumar Srinivasan
            Reporter:
            Ming Zhou (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:
              Imported:
              Indexed: