7026184: (launcher) Regression: class with unicode name can't be launched by java. Reviewed-by: mchung, sherman